--- a/frontend/src/index.output.css
+++ b/frontend/src/index.output.css
@@ -845,6 +845,10 @@ video {
   height: 100vh;
 }
 
+.h-52 {
+  height: 13rem;
+}
+
 .max-h-16 {
   max-height: 4rem;
 }
@@ -912,6 +916,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .flex-1 {
@@ -1156,6 +1164,11 @@ video {
 
 .border-transparent {
   border-color: transparent;
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
 }
 
 .border-b-black {
